# rt_app

./: .gitmodules  .ignore  CMakeLists.txt  app.c  app.h  camera.c  camera.h  data.h  entities.c  entities.h  gui.c  gui.h
assets/: compute_shader.glsl  compute_shader.hlsl  debug_pixel.hlsl  debug_vertex.hlsl  gui_pixel.glsl  gui_pixel.hlsl  gui_vertex.glsl  gui_vertex.hlsl  pixel_shader.glsl  pixel_shader.hlsl  quad_pixel.hlsl  quad_vertex.glsl  quad_vertex.hlsl  ray_directions.glsl  ray_directions.hlsl  rt_shader.hlsl  shader_include.h  update_entities.glsl  update_entities.hlsl  vertex_shader.glsl  vertex_shader.hlsl
assets/gui/: gui_pixel.glsl  gui_pixel.hlsl  gui_vertex.glsl  gui_vertex.hlsl  quad_vertex.glsl  quad_vertex.hlsl
assets/raster/: pixel_shader.glsl  pixel_shader.hlsl  quad_texture_pixel.glsl  quad_texture_vertex.glsl  vertex_shader.glsl  vertex_shader.hlsl
assets/raytracing/: rt.rchit  rt_shader.hlsl
assets/shaders/: lighting.h
assets/shaders/debug/: debug_pixel.glsl  debug_vertex.glsl
assets/shaders/gui/: gui_pixel.glsl  gui_pixel.hlsl  gui_vertex.glsl  nuklear_gui_pixel.glsl  nuklear_gui_pixel.hlsl  nuklear_gui_vertex.glsl  nuklear_gui_vertex.hlsl  quad_pixel.glsl
assets/shaders/raster/: pixel_shader.glsl  pixel_shader.hlsl  quad_texture_pixel.hlsl  quad_texture_vertex.hlsl  vertex_shader.glsl  vertex_shader.hlsl
assets/shaders/raytracing/: rt.rchit  rt.rgen  rt.rmiss  rt_shader.hlsl  rt_shadow.rmiss
rendering/: debug_pipeline.c  debug_pipeline.h  gui.c  gui.h  nuklear_gui.c  nuklear_gui.h  quad_texture.c  quad_texture.h  raster_pipeline.c  raster_pipeline.h  rt_pipeline.c  rt_pipeline.h
